manifests/tools/manifests/kube-prometheus-stack/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus
  labels:
    shared-gateway-access: 'true'
