manifests/tools/manifests/kube-prometheus-stack/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute
spec:
  hostnames:
  - prometheus.matoru.ru
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway
  rules:
  - backendRefs:
    - group: ''	
      kind: Service	
      name: kube-prometheus-stack-grafana
      port: 80
    matches:	
    - path:	
        type: PathPrefix	
        value: /
